--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
+#---
+#layout: home
+# author_profile: true
+#---
+
+
 ---
 layout: home
 author_profile: true
+title: About
+class: wide
 ---
+
+<body>
+  <p style="font-size: 0.8em;">Alan Osorio-Mora is a postdoctoral researcher at RPTU Kaiserslautern.</p>
+
+  <div style="display: flex;">
+    <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
+      <h3>Research Interests</h3>
+      <ul style="padding-left: 0;">
+        <li style="margin-left: 20px;">Bilevel Optimization</li>
+        <li style="margin-left: 20px;">Robust Optimization</li>
+        <li style="margin-left: 20px;">Bounded Rationality</li>
+      </ul>
+    </div>
+    <div style="flex: 1; font-size: 0.8em;">
+      <h3>Education</h3>
+      <ul style="padding-left: 0;">
+        <li style="margin-left: 20px;">
+          <b> PhD in Mathematical Optimization, 2020-2024 </b> <br>
+          Trier University, Germany
+        </li>
+        <li style="margin-left: 20px;">
+          <b> Master of Science in Applied Mathematics, 2020 </b> <br>
+          Trier University, Germany
+        </li>
+        <li style="margin-left: 20px;">
+          <b> Bachelor of Science in Business Mathematics, 2019 </b> <br>
+          Trier University, Germany
+        </li>
+      </ul>
+    </div>
+  </div>  
+</body>
