--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@ class: wide
     <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
       <h3>Research Interests</h3>
       <ul style="padding-left: 0;">
-        <li style="margin-left: 20px;">Bilevel Optimization</li>
-        <li style="margin-left: 20px;">Robust Optimization</li>
-        <li style="margin-left: 20px;">Bounded Rationality</li>
+        <li style="margin-left: 20px;">Stochastic optimization, metaheuristics</li>
+        <li style="margin-left: 20px;">Vehicle routing, Facility location</li>
+        <li style="margin-left: 20px;">Logistics</li>
       </ul>
     </div>
     <div style="flex: 1; font-size: 0.8em;">
       <h3>Education</h3>
       <ul style="padding-left: 0;">
         <li style="margin-left: 20px;">
-          <b> PhD in Mathematical Optimization, 2020-2024 </b> <br>
-          Trier University, Germany
+          <b> PhD in Operations Research, 2020-2024 </b> <br>
+          Universita di Bologna, Italy
         </li>
         <li style="margin-left: 20px;">
-          <b> Master of Science in Applied Mathematics, 2020 </b> <br>
-          Trier University, Germany
+          <b> Masters in Industrial Engineering, 2016-2019 </b> <br>
+          Universidad del Bio-Bio, Chile
         </li>
         <li style="margin-left: 20px;">
-          <b> Bachelor of Science in Business Mathematics, 2019 </b> <br>
-          Trier University, Germany
+          <b> Bsc. Industrial Engineering, 2012-2018 </b> <br>
+          Universidad del Bio-Bio, Chile
         </li>
       </ul>
     </div>
