--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ class: wide
 ---
 
 <body>
-  <p style="font-size: 0.8em;">Alan Osorio-Mora is a postdoctoral researcher at RPTU Kaiserslautern.</p>
+  <p style="font-size: 0.8em;">EUROYoung is a Forum of EURO, the European Association of Operational Research Societies.
+  We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
   <div style="display: flex;">
     <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
