--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@ class: wide
 
   <div style="display: flex;">
     <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
-      <h3>Research Interests</h3>
+      <h3>Objectives</h3>
       <ul style="padding-left: 0;">
-        <li style="margin-left: 20px;">Stochastic optimization, metaheuristics</li>
-        <li style="margin-left: 20px;">Vehicle routing, Facility location</li>
-        <li style="margin-left: 20px;">Logistics</li>
+        <li style="margin-left: 20px;">Fostering collaboration among students and early-career researchers in O.R.</li>
+        <li style="margin-left: 20px;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through training</li>
+        <li style="margin-left: 20px;">Creating networks both among young researchers and with more senior leaders in the field of O.R</li>
+             <li style="margin-left: 20px;">Connecting demand and offer in the O.R. job market, both in academia and the industry.</li>
       </ul>
     </div>
     <div style="flex: 1; font-size: 0.8em;">
