--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@ class: wide
   <p style="font-size: 0.8em;">EUROYoung is a Forum of EURO, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
+
+    <p style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
+      <h3>Objectives</h3>
+      <ul style="padding-left: 0;">
+        <li style="margin-left: 20px;">Fostering **collaboration** among students and early-career researchers in O.R.</li>
+        <li style="margin-left: 20px;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through **training**</li>
+        <li style="margin-left: 20px;">Creating **networks** both among young researchers and with more senior leaders in the field of O.R</li>
+             <li style="margin-left: 20px;">Connecting demand and offer in the **O.R. job market**, both in academia and the industry.</li>
+      </ul>
+
+
+  
   <div style="display: flex;">
     <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
       <h3>Objectives</h3>
       <ul style="padding-left: 0;">
-        <li style="margin-left: 20px;">Fostering collaboration among students and early-career researchers in O.R.</li>
-        <li style="margin-left: 20px;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through training</li>
-        <li style="margin-left: 20px;">Creating networks both among young researchers and with more senior leaders in the field of O.R</li>
-             <li style="margin-left: 20px;">Connecting demand and offer in the O.R. job market, both in academia and the industry.</li>
+        <li style="margin-left: 20px;">Fostering **collaboration** among students and early-career researchers in O.R.</li>
+        <li style="margin-left: 20px;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through **training**</li>
+        <li style="margin-left: 20px;">Creating **networks** both among young researchers and with more senior leaders in the field of O.R</li>
+             <li style="margin-left: 20px;">Connecting demand and offer in the **O.R. job market**, both in academia and the industry.</li>
       </ul>
     </div>
     <div style="flex: 1; font-size: 0.8em;">
@@ -37,4 +49,6 @@ class: wide
       </ul>
     </div>
   </div>  
+
+  
 </body>
