--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ class: wide
 ---
 
 <body>
-  <p style="font-size: 0.8em;">EUROYoung is a Forum of EURO, the European Association of Operational Research Societies.
+  <p style="font-size: 0.8em;">EUROYoung is a Forum of [EURO](https://www.euro-online.org/), the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
 
