--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ class: wide
 ---
 
 <body>
-  <p style="font-size: 0.8em;">EUROYoung is a Forum of [EURO](https://www.euro-online.org/), the European Association of Operational Research Societies.
+  <p style="font-size: 0.8em;">EUROYoung is a Forum of <a href="https://www.euro-online.org/" title="EURO">, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
-
+           
     <p style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
       <h3>Objectives</h3>
       <ul style="padding-left: 0;">
@@ -20,35 +20,4 @@ class: wide
       </ul>
 
 
-  
-  <div style="display: flex;">
-    <div style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
-      <h3>Objectives</h3>
-      <ul style="padding-left: 0;">
-        <li style="margin-left: 20px;">Fostering **collaboration** among students and early-career researchers in O.R.</li>
-        <li style="margin-left: 20px;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through **training**</li>
-        <li style="margin-left: 20px;">Creating **networks** both among young researchers and with more senior leaders in the field of O.R</li>
-             <li style="margin-left: 20px;">Connecting demand and offer in the **O.R. job market**, both in academia and the industry.</li>
-      </ul>
-    </div>
-    <div style="flex: 1; font-size: 0.8em;">
-      <h3>Education</h3>
-      <ul style="padding-left: 0;">
-        <li style="margin-left: 20px;">
-          <b> PhD in Operations Research, 2020-2024 </b> <br>
-          Universita di Bologna, Italy
-        </li>
-        <li style="margin-left: 20px;">
-          <b> Masters in Industrial Engineering, 2016-2019 </b> <br>
-          Universidad del Bio-Bio, Chile
-        </li>
-        <li style="margin-left: 20px;">
-          <b> Bsc. Industrial Engineering, 2012-2018 </b> <br>
-          Universidad del Bio-Bio, Chile
-        </li>
-      </ul>
-    </div>
-  </div>  
-
-  
 </body>
