--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ class: wide
 ---
 
 <body>
-  <p style="font-size: 0.8em;"> EUROYoung is a Forum of EURO, the European Association of Operational Research Societies.
+  <p style="font-size: 0.8em;"> EUROYoung is a Forum of  <a href="https://www.euro-online.org/" title="EURO">EURO</a>EURO, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
   
@@ -19,6 +19,6 @@ class: wide
         <li style="margin-left: 20px; font-size: 0.8em;">Creating **networks** both among young researchers and with more senior leaders in the field of O.R</li>
              <li style="margin-left: 20px; font-size: 0.8em;">Connecting demand and offer in the **O.R. job market**, both in academia and the industry.</li>
       </ul>
-
+</p>
 
 </body>
