--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ class: wide
 ---
 
 <body>
-  <p style="font-size: 0.8em;"> EUROYoung is a Forum of  <a href="https://www.euro-online.org/" title="EURO">EURO</a>EURO, the European Association of Operational Research Societies.
+  <p style="font-size: 0.8em;"> EUROYoung is a Forum of  <a href="https://www.euro-online.org/" title="EURO">EURO</a>, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
   
