--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-RO---
+---
 layout: home
 author_profile: true
 title: Who we are?
@@ -14,10 +14,10 @@ class: wide
     <p style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
       <h3>Objectives</h3>
       <ul style="padding-left: 0;">
-        <li style="margin-left: 20px; font-size: 0.8em;">Fostering **collaboration** among students and early-career researchers in O.R.</li>
-        <li style="margin-left: 20px; font-size: 0.8em;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through **training**</li>
-        <li style="margin-left: 20px; font-size: 0.8em;">Creating **networks** both among young researchers and with more senior leaders in the field of O.R</li>
-             <li style="margin-left: 20px; font-size: 0.8em;">Connecting demand and offer in the **O.R. job market**, both in academia and the industry.</li>
+        <li style="margin-left: 20px; font-size: 0.8em;">Fostering <b>collaboration</b> among students and early-career researchers in O.R.</li>
+        <li style="margin-left: 20px; font-size: 0.8em;">Providing young O.R. scholars and practitioners with tools to advance their careers, mainly through <b>training</b>. </li>
+        <li style="margin-left: 20px; font-size: 0.8em;">Creating <b>networks</b> both among young researchers and with more senior leaders in the field of O.R</li>
+        <li style="margin-left: 20px; font-size: 0.8em;">Connecting demand and offer in the <b>O.R. job market</b>, both in academia and the industry.</li>
       </ul>
 </p>
 
