--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 ---
 layout: home
 author_profile: true
-title: Who we are?
+title: Welcome!
 class: wide
+header:
+  overlay_image: /assets/images/header1.jpeg
+  caption: "Cuernos del Paine - Parque Nacional Torres del Paine, Chile"
 ---
 
 <body>
+        <h3>Who we are?</h3>
+  
   <p style="font-size: 0.8em;"> EUROYoung is a Forum of  <a href="https://www.euro-online.org/" title="EURO">EURO</a>, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
