--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 title: Welcome!
 class: wide
 header:
-  overlay_image: /assets/images/header1.jpeg
+  overlay_image: /assets/images/EURO.png
   caption: "Cuernos del Paine - Parque Nacional Torres del Paine, Chile"
 ---
 
