--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Welcome!
 class: wide
 header:
   overlay_image: /assets/images/EURO.png
-  caption: "Cuernos del Paine - Parque Nacional Torres del Paine, Chile"
+  caption: "The place for young researchers"
 ---
 
 <body>
