--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ author_profile: true
 title: Welcome!
 class: wide
 header:
-#  overlay_image: /assets/images/EURO.png
-overlay_color: "#333"
-  caption: "The place for young researchers"
+  image: /assets/images/EURO.png
+  
 ---
 
 <body>
