--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@ layout: home
 author_profile: true
 title: Welcome!
 class: wide
+
+  excerpt: "The place for young researchers"
 header:
-  image: /assets/images/EURO.png
-  
+  overlay_image: /assets/images/EURO.png
+  overlay_filter: 0.5
+
 ---
 
 <body>
