--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ class: wide
 
  
 header:
-  overlay_image: /assets/images/EURO.png
+  overlay_image: /assets/images/EUROHEADER.jpeg
   overlay_filter: 0.5
 
 ---
