--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ class: wide
 
  
 header:
-  overlay_image: /assets/images/EUROHEADER.jpeg
-  overlay_filter: 0.5
+  overlay_image: /assets/images/EURO.png
+  overlay_filter: 0.3
 
 ---
 
