--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@ header:
 ---
 
 <body>
-        <h3>Who we are?</h3>
+
+ <header>
+        <h1>Who we are?</h1>
   
   <p style="font-size: 0.8em;"> EUROYoung is a Forum of  <a href="https://www.euro-online.org/" title="EURO">EURO</a>, the European Association of Operational Research Societies.
   We provide training, dissemination and networking opportunities to young Operational Researchers.</p>
 
+  </header>
   
-  
+
+ <header>
+       <h1>Objectives</h1>
     <p style="flex: 0.7; font-size: 0.8em; margin-right: 5px;">
-      <h3>Objectives</h3>
       <ul style="padding-left: 0;">
         <li style="margin-left: 20px; font-size: 0.8em;">Fostering <b>collaboration</b> among students and early-career researchers in OR.</li>
         <li style="margin-left: 20px; font-size: 0.8em;">Providing young OR scholars and practitioners with tools to advance their careers, mainly through <b>training</b>. </li>
@@ -28,7 +32,11 @@ header:
         <li style="margin-left: 20px; font-size: 0.8em;">Connecting demand and offer in the <b>OR job market</b>, both in academia and the industry.</li>
       </ul>
 </p>
+    </header>
 
+ <header>
+        <h1>Highlights: 1st EUROYoung (Mini)PhD School</h1>
  {% include video id="t2--hX3yhmE" provider="youtube" %}
+     </header>
 
 </body>
