--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ header:
       <ul style="padding-left: 0;">
         <li style="margin-left: 20px; font-size: 0.8em;">Fostering <b>collaboration</b> among students and early-career researchers in OR.</li>
         <li style="margin-left: 20px; font-size: 0.8em;">Providing young OR scholars and practitioners with tools to advance their careers, mainly through <b>training</b>. </li>
-        <li style="margin-left: 20px; font-size: 0.8em;">Creating <b>networks</b> both among young researchers and with more senior leaders in the field of O.R</li>
+        <li style="margin-left: 20px; font-size: 0.8em;">Creating <b>networks</b> both among young researchers and with more senior leaders in the field of OR.</li>
         <li style="margin-left: 20px; font-size: 0.8em;">Connecting demand and offer in the <b>OR job market</b>, both in academia and the industry.</li>
       </ul>
 </p>
