--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@ author_profile: true
 title: Welcome!
 class: wide
 
- 
 header:
+  image: /assets/images/EURO.png
+<noscript>
+ header:
   overlay_image: /assets/images/EURO.png
   overlay_filter: 0.3
+</noscript> 
+
 
 ---
 
