--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@ header:
       </ul>
 </p>
     </header>
-
- <header>
+  
+<p> We endorse the <a href="https://www.euro-online.org/web/pages/1654/wisdom/" title="EURO WISDOM Forum">EURO WISDOM Forum</a> objectives to support, empower, and encourage the participation of all genders in OR. </p> 
+ 
+  <header>
         <h1>Highlights: 1st EUROYoung (Mini) PhD School</h1>
  {% include video id="t2--hX3yhmE" provider="youtube" %}
      </header>
