--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@ header:
 </p>
 
 <!-- ===== HIGHLIGHTS ===== -->
+
+<section class="section highlight-box">
+  <h2>Highlights: 5th EUROYoung Workshop - Naples 2025, Italy </h2>
+  {% include video id="tkyZAbAZtEA" provider="youtube" %}
+</section>
+
 <section class="section highlight-box">
   <h2>Highlights: 1st EUROYoung (Mini) PhD School</h2>
   {% include video id="t2--hX3yhmE" provider="youtube" %}
