--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@ header:
 ---
 
 <style>
+  /* ===== PHOTO GALLERIES ===== */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 1rem;
+  margin-top: 1.5rem;
+}
+
+.gallery a {
+  display: block;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.08);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.gallery a:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 22px rgba(0,0,0,0.15);
+}
+
+.gallery img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  display: block;
+}
+
 /* ===== HERO CTA ===== */
 .hero-cta {
   background: linear-gradient(135deg, #1f3c88, #3f72af);
@@ -204,10 +232,10 @@ header:
   objectives to support, empower, and encourage the participation of all genders in OR.
 </p>
 
-<!-- ===== HIGHLIGHTS ===== -->
+<!-- ===== EXISTING HIGHLIGHTS (UNCHANGED) ===== -->
 
 <section class="section highlight-box">
-  <h2>Highlights: 5th EUROYoung Workshop - Naples 2025, Italy </h2>
+  <h2>Highlights: 5th EUROYoung Workshop – Naples 2025, Italy</h2>
   {% include video id="tkyZAbAZtEA" provider="youtube" %}
 </section>
 
@@ -215,3 +243,37 @@ header:
   <h2>Highlights: 1st EUROYoung (Mini) PhD School</h2>
   {% include video id="t2--hX3yhmE" provider="youtube" %}
 </section>
+
+<!-- ===== NEW HIGHLIGHT: WS 2025 GALLERY ===== -->
+
+<section class="section highlight-box">
+  <h2>Highlights: EUROYoung Workshop 2025</h2>
+
+  <div class="gallery">
+    <a href="/assets/images/WS_2025/WS_2025_1.jpg"><img src="/assets/images/WS_2025/WS_2025_1.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_2.jpg"><img src="/assets/images/WS_2025/WS_2025_2.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_3.jpg"><img src="/assets/images/WS_2025/WS_2025_3.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_4.jpg"><img src="/assets/images/WS_2025/WS_2025_4.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_5.jpg"><img src="/assets/images/WS_2025/WS_2025_5.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_6.jpg"><img src="/assets/images/WS_2025/WS_2025_6.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_7.jpg"><img src="/assets/images/WS_2025/WS_2025_7.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_8.jpg"><img src="/assets/images/WS_2025/WS_2025_8.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_9.jpg"><img src="/assets/images/WS_2025/WS_2025_9.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_10.jpg"><img src="/assets/images/WS_2025/WS_2025_10.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_11.jpg"><img src="/assets/images/WS_2025/WS_2025_11.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_12.jpg"><img src="/assets/images/WS_2025/WS_2025_12.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_13.jpg"><img src="/assets/images/WS_2025/WS_2025_13.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_14.jpg"><img src="/assets/images/WS_2025/WS_2025_14.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_15.jpg"><img src="/assets/images/WS_2025/WS_2025_15.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_16.jpg"><img src="/assets/images/WS_2025/WS_2025_16.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_17.jpg"><img src="/assets/images/WS_2025/WS_2025_17.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_18.jpg"><img src="/assets/images/WS_2025/WS_2025_18.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_19.jpg"><img src="/assets/images/WS_2025/WS_2025_19.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_20.jpg"><img src="/assets/images/WS_2025/WS_2025_20.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_21.jpg"><img src="/assets/images/WS_2025/WS_2025_21.jpg" alt="WS 2025"></a>
+  </div>
+</section>
+
+<!-- ===== NEW HIGHLIGHT: EURO 2025 GALLERY ===== -->
+
+
