--- a/index.html
+++ b/index.html
@@ -250,27 +250,27 @@ header:
   <h2>Highlights: EUROYoung Workshop 2025</h2>
 
   <div class="gallery">
-    <a href="/assets/images/WS_2025/WS_2025_1.jpg"><img src="/assets/images/WS_2025/WS_2025_1.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_2.jpg"><img src="/assets/images/WS_2025/WS_2025_2.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_3.jpg"><img src="/assets/images/WS_2025/WS_2025_3.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_4.jpg"><img src="/assets/images/WS_2025/WS_2025_4.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_5.jpg"><img src="/assets/images/WS_2025/WS_2025_5.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_6.jpg"><img src="/assets/images/WS_2025/WS_2025_6.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_7.jpg"><img src="/assets/images/WS_2025/WS_2025_7.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_8.jpg"><img src="/assets/images/WS_2025/WS_2025_8.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_9.jpg"><img src="/assets/images/WS_2025/WS_2025_9.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_10.jpg"><img src="/assets/images/WS_2025/WS_2025_10.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_11.jpg"><img src="/assets/images/WS_2025/WS_2025_11.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_12.jpg"><img src="/assets/images/WS_2025/WS_2025_12.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_13.jpg"><img src="/assets/images/WS_2025/WS_2025_13.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_14.jpg"><img src="/assets/images/WS_2025/WS_2025_14.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_15.jpg"><img src="/assets/images/WS_2025/WS_2025_15.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_16.jpg"><img src="/assets/images/WS_2025/WS_2025_16.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_17.jpg"><img src="/assets/images/WS_2025/WS_2025_17.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_18.jpg"><img src="/assets/images/WS_2025/WS_2025_18.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_19.jpg"><img src="/assets/images/WS_2025/WS_2025_19.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_20.jpg"><img src="/assets/images/WS_2025/WS_2025_20.jpg" alt="WS 2025"></a>
-    <a href="/assets/images/WS_2025/WS_2025_21.jpg"><img src="/assets/images/WS_2025/WS_2025_21.jpg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_1.jpeg"><img src="/assets/images/WS_2025/WS_2025_1.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_2.jpeg"><img src="/assets/images/WS_2025/WS_2025_2.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_3.jpeg"><img src="/assets/images/WS_2025/WS_2025_3.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_4.jpeg"><img src="/assets/images/WS_2025/WS_2025_4.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_5.jpeg"><img src="/assets/images/WS_2025/WS_2025_5.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_6.jpeg"><img src="/assets/images/WS_2025/WS_2025_6.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_7.jpeg"><img src="/assets/images/WS_2025/WS_2025_7.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_8.jpeg"><img src="/assets/images/WS_2025/WS_2025_8.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_9.jpeg"><img src="/assets/images/WS_2025/WS_2025_9.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_10.jpeg"><img src="/assets/images/WS_2025/WS_2025_10.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_11.jpeg"><img src="/assets/images/WS_2025/WS_2025_11.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_12.jpeg"><img src="/assets/images/WS_2025/WS_2025_12.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_13.jpeg"><img src="/assets/images/WS_2025/WS_2025_13.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_14.jpeg"><img src="/assets/images/WS_2025/WS_2025_14.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_15.jpeg"><img src="/assets/images/WS_2025/WS_2025_15.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_16.jpeg"><img src="/assets/images/WS_2025/WS_2025_16.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_17.jpeg"><img src="/assets/images/WS_2025/WS_2025_17.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_18.jpeg"><img src="/assets/images/WS_2025/WS_2025_18.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_19.jpeg"><img src="/assets/images/WS_2025/WS_2025_19.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_20.jpeg"><img src="/assets/images/WS_2025/WS_2025_20.jpeg" alt="WS 2025"></a>
+    <a href="/assets/images/WS_2025/WS_2025_21.jpeg"><img src="/assets/images/WS_2025/WS_2025_21.jpeg" alt="WS 2025"></a>
   </div>
 </section>
 
