--- a/index.html
+++ b/index.html
@@ -276,4 +276,22 @@ header:
 
 <!-- ===== NEW HIGHLIGHT: EURO 2025 GALLERY ===== -->
 
+<section class="section highlight-box">
+  <h2>Highlights: EURO Conference 2025</h2>
 
+  <div class="gallery">
+    <a href="/assets/images/EURO_2025/EURO_2025_1.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_1.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_2.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_2.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_3.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_3.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_4.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_4.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_5.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_5.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_6.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_6.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_7.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_7.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_8.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_8.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_9.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_9.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_10.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_10.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_11.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_11.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_12.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_12.jpeg" alt="EURO 2025"></a>
+    <a href="/assets/images/EURO_2025/EURO_2025_13.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_13.jpeg" alt="EURO 2025"></a>
+  </div>
+</section>
