--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ header:
 <!-- ===== NEW HIGHLIGHT: WS 2025 GALLERY ===== -->
 
 <section class="section highlight-box">
-  <h2>Highlights: EUROYoung Workshop 2025</h2>
+  <h2>Photo Gallery: EUROYoung Workshop 2025</h2>
 
   <div class="gallery">
     <a href="/assets/images/WS_2025/WS_2025_1.jpeg"><img src="/assets/images/WS_2025/WS_2025_1.jpeg" alt="WS 2025"></a>
@@ -277,7 +277,7 @@ header:
 <!-- ===== NEW HIGHLIGHT: EURO 2025 GALLERY ===== -->
 
 <section class="section highlight-box">
-  <h2>Highlights: EURO Conference 2025</h2>
+  <h2>Photo Gallery: EURO Conference 2025</h2>
 
   <div class="gallery">
     <a href="/assets/images/EURO_2025/EURO_2025_1.jpeg"><img src="/assets/images/EURO_2025/EURO_2025_1.jpeg" alt="EURO 2025"></a>
